add new workflows endpoint
